# video-encoder

./: .gitignore  CLAUDE.md  README.md  build.ps1  encoder.db  install.sh  package.json  pyproject.toml  server_service.py  start.bat  start.sh  update.bat  update.sh  video-encode-web-1080p.ps1
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/notes/: 2026-03-17-cancel-button-deletes-job.md
.planning/phases/01-subprocess-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-sqlite-state-layer/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-pipeline-runner/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-web-api-scheduler/: 04-01-PLAN.md  (+9 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
frontend/: cache-bust.cjs  clean.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
src/encoder/: auth.py  cleanup.py  db.py  ffmpeg.py  main.py  pipeline.py  scheduler.py  sse.py  watcher.py
tests/: test_api_delete.py  test_db.py  test_ffmpeg.py  test_pipeline.py  test_settings_db.py  test_sse.py  test_sse_debug.py  test_task2_verify.py
(+97 files in other folders)
