[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "encoder"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["aiosqlite>=0.22,<0.23"]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9", "pytest-timeout>=2.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
