[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "encoder"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "aiosqlite>=0.22,<0.23",
    "scenedetect[opencv]>=0.6.7,<0.7",
    "fastapi>=0.111,<0.120",
    "uvicorn[standard]>=0.29,<0.35",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9", "pytest-timeout>=2.3", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
